Pages + Navbar (need fix)

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,14 @@
     <title>portfolio</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Projects</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
