--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,10 @@
   <body>
     <nav>
       <ul>
+        <li>Home</li>
+        <li>About me</li>
+        <li>Projecten</li>
+        <li>Contact me</li>
       </ul>
     </nav>
     <div id="root"></div>
